[project]
name = "pykv"
version = "0.0.1"
authors = [
  { name="Amuthan Mannan", email="amuthanmannar4@gmail.com" },
]
description = "Python based key value store"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/MannarAmuthan/pykv"
Issues = "https://github.com/MannarAmuthan/pykv/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"